samples/_failures_safe/1761210095_980c22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e8b6947.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_1e8b6947.c:160:16: error: missing terminating " character
  160 |         printf("State: %s, Counter: %u, Buffer: %
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1e8b6947.c:160:9: error: expected expression at end of input
  160 |         printf("State: %s, Counter: %u, Buffer: %
      |         ^~~~~~
./samples/SAFE/__tmp_1e8b6947.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1e8b6947.c:160:9: error: expected declaration or statement at end of input
